--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
+        with:
+          extra-repositories: |
+            https://timelyportfolio.r-universe.dev
 
       - name: Install system libraries
         run: |
@@ -36,6 +39,7 @@ jobs:
             gt
             gtExtras
             reactable
+            dataui
             reactablefmtr
             ggtext
             glue
