--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -3,7 +3,7 @@ name: Publish Quarto Dashboard
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 13 * * *"  # 5/6am Pacific tume
+    - cron: "0 14 * * *"  # 6:00am PT during PST (UTC). In PDT this runs at 7:00am local.
 
 jobs:
   build-deploy:
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Check out repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
@@ -49,11 +51,12 @@ jobs:
             ggimage
 
       - name: Render
-        run: quarto render
+        run: quarto render --output-dir _site
 
-      - name: Publish to GitHub Pages
-        uses: quarto-dev/quarto-actions/publish@v2
+      - name: Deploy to GitHub Pages (gh-pages)
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          target: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: _site
+          force_orphan: true
