--- a/.github/workflows/mvp-odds.yaml
+++ b/.github/workflows/mvp-odds.yaml
@@ -36,7 +36,7 @@ jobs:
           packages: jsonlite, dplyr
           
       - name: Run R update script
-        run: Rscript nhl-mvp-odds.R
+        run: Rscript nhl-mvp-odds.r
         shell: bash
 
       - name: Commit changes in data folder
